<resources>
    <string name="app_name">Final Year Project</string>
    <string name="nav_records">Records</string>
    <string name="nav_receipts">Receipts</string>
    <string name="nav_charts">Charts</string>
    <string name="nav_more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keyboard_init_date">Today</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="budget_dialog_title">Set A Monthly Record</string>
    <string name="budget_dialog_hint">Enter the amount</string>
    <string name="receipts">Receipts</string>
    <string name="details">Details</string>
    <string name="records">Records</string>
    <string name="extracted_text">Extracted Text</string>
    <string name="charts">Charts</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="expense_list">Expense List</string>
    <string name="clear">Clear All Data</string>
    <string name="export_records">Export Records</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="export">Export</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="format">Format</string>
    <string name="year_month_placeholder">2023 Mar</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="memo">Memo</string>
    <string name="record_type">Record Type</string>
    <string name="category">Category</string>
    <string name="import_records">Import Records</string>
    <string name="excel_import_success">Records inserted successfully</string>
</resources>