<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_app_bg"
    tools:context=".fragments.RecordsFragment">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/charts"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="2023 Mar"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_down" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_expense_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/shape_rect_button"
            android:backgroundTint="@color/blue"
            android:elevation="5dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_income_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/shape_rect_button"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/income"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_btns"
        android:overScrollMode="never"
        android:clipToPadding="false"
        android:paddingBottom="100dp" />


</RelativeLayout>